<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26957F"

    >

    <FrameLayout
        android:id="@+id/fragment_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftt_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />


            <Spinner
                android:id="@+id/spinnerBluetoothR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/leftt_guideline"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/spinnerBluetoothL"
                app:layout_constraintVertical_bias="0.2" />

            <Spinner
                android:id="@+id/spinnerBluetoothL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/leftt_guideline"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <ListView
                android:id="@+id/deviceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <Button
                android:id="@+id/blCancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/leftt_guideline"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBluetoothR"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintWidth_percent=".4" />

            <Button
                android:id="@+id/blSaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBluetoothR"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintWidth_percent=".4" />

            <TextView
                android:id="@+id/leftFoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/leftFoot_en"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/spinnerBluetoothL"
                app:layout_constraintStart_toStartOf="@+id/spinnerBluetoothL" />

            <TextView
                android:id="@+id/leftFootStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@id/leftFoot"
                app:layout_constraintTop_toTopOf="@id/leftFoot" />

            <TextView
                android:id="@+id/rightFoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/rightFoot_en"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/spinnerBluetoothR"
                app:layout_constraintStart_toStartOf="@+id/spinnerBluetoothR" />

            <TextView
                android:id="@+id/rightFootStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@id/rightFoot"
                app:layout_constraintTop_toTopOf="@id/rightFoot" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>